Updating layout, removing side nav (it wasn't working), updating readme with build instructions, updating Gemfile to latest, removing old pinned Gems

--- a/source/assets/css/partials/sections/_content.scss
+++ b/source/assets/css/partials/sections/_content.scss
@@ -303,8 +303,7 @@ body{margin: 5px 0px 0px 0px;}
 }
 // Content
 .content{
-    padding: 20px 20px 60px 0px;
-    margin-left: 33.33%;
+    padding: 2rem 0;
     .search-highlight{background-color: $c_search;}
     h2,
     h1{
