--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<!-- Set title to current page title -->
-		<title><%= current_page.data.title || "Datica HIPAA Docs" %></title>
+		<title><%= current_page.data.title || "Datica HIPAA Compliance Policies" %></title>
 		<meta name="description" content="Our company is built with information security and compliance at its core. Our policies, procedures, and technology go above and beyond HIPAA compliance to ensure our users' data, and their users' data, is secure. We take HIPAA compliance seriously because we believe it is the right thing to do.">
 		<!-- Set keyword content to current post keywords data -->
 		<meta name="keywords" content="HIPAA, Security, Compliance, Software, Infrastructure, Documentation">
@@ -16,7 +16,7 @@
 		<meta property="og:locale" content="en_US">
 		<meta property="twitter:card" content="summary" />
 		<meta property="twitter:site" content="@daticahealth" />
-		<meta property="twitter:title" content="Datica HIPAA Docs" />
+		<meta property="twitter:title" content="Datica HIPAA Compliance Policies" />
 		<meta property="twitter:description" content="Our company is built with information security and compliance at its core. Our policies, procedures, and technology go above and beyond HIPAA compliance to ensure our users' data, and their users' data, is secure. We take HIPAA compliance seriously because we believe it is the right thing to do." />
 		<meta property="twitter:image" content="/assets/img/logo.svg" />
 		<!-- Icons -->
